Further refactored the deploy process. HEADSUP you need to update your build.properties

--- a/project.properties
+++ b/project.properties
@@ -3,6 +3,10 @@
 # -------------------------------------------------------------------
 lenya.src.dir = /home/michi/src/apache/lenya-trunk
 cocoon.src.dir= /home/michi/src/apache/cocoon-2.1.x
+# debug (true|false)
+# true = servlet-debug
+# false = servlet
+debug=true
 # -------------------------------------------------------------------
 # ERP JCR Properties
 # -------------------------------------------------------------------
