--- a/build.xml
+++ b/build.xml
@@ -17,55 +17,53 @@
     <property name="classes.dir" value="${build.dir}/classes"/>
     <property name="maven.repo.local" value="${user.home}/.maven/repository"/>
 
-    <path id="classpath.build">
+  	<path id="classpath.build">
       <fileset dir="lib">
         <include name="*.jar"/>
       </fileset>
       <pathelement location="${maven.repo.local}/jsr170/jars/jcr-1.0.jar"/>
-      <pathelement location="${maven.repo.local}/jackrabbit/jars/jackrabbit-api-1.0-dev-LCR209797.jar"/>
-      <pathelement location="${maven.repo.local}/jackrabbit/jars/jackrabbit-commons-1.0-dev-LCR209797.jar"/>
-      <pathelement location="${maven.repo.local}/jackrabbit/jars/jackrabbit-core-1.0-dev-LCR209797.jar"/>
+      <pathelement location="${maven.repo.local}/springframework/jars/spring-1.2.4.jar"/>
       <pathelement location="${maven.repo.local}/log4j/jars/log4j-1.2.9.jar"/>
     </path>
 
-    <path id="classpath.lenya.net">
-      <pathelement location="/home/michi/src/apache/lenya/trunk/build/lenya/webapp/WEB-INF/lib/log4j-1.2.11.jar"/>
-    </path>
-
-    <path id="classpath.lenya.util">
-      <pathelement location="/home/michi/src/apache/lenya/trunk/build/lenya/webapp/WEB-INF/lib/log4j-1.2.11.jar"/>
-      <pathelement location="/home/michi/src/apache/lenya/trunk/tools/jetty/lib/servlet-2.3.jar"/>
-      <pathelement location="/home/michi/src/apache/lenya/trunk/build/lenya/webapp/WEB-INF/lib/cocoon-2.1.8-dev.jar"/>
-    </path>
-
-    <path id="classpath.lenya.xml">
-      <pathelement location="/home/michi/src/apache/lenya/trunk/build/lenya/webapp/WEB-INF/lib/jing-20030619.jar"/>
-      <pathelement location="/home/michi/src/apache/lenya/trunk/build/lenya/webapp/WEB-INF/lib/log4j-1.2.11.jar"/>
-      <pathelement location="/home/michi/src/apache/lenya/trunk/build/lenya/webapp/WEB-INF/lib/xml-commons-resolver-1.1.jar"/>
-    </path>
-
-    <path id="classpath.lenya.ac">
-      <pathelement location="/home/michi/src/apache/lenya/trunk/build/lenya/webapp/WEB-INF/lib/avalon-framework-api-4.1.5.jar"/>
-      <pathelement location="/home/michi/src/apache/lenya/trunk/build/lenya/webapp/WEB-INF/lib/avalon-framework-impl-4.1.5.jar"/>
-      <pathelement location="/home/michi/src/apache/lenya/trunk/build/lenya/webapp/WEB-INF/lib/cocoon-2.1.8-dev.jar"/>
-      <pathelement location="/home/michi/src/apache/lenya/trunk/build/lenya/webapp/WEB-INF/lib/commons-codec-1.3.jar"/>
-      <pathelement location="/home/michi/src/apache/lenya/trunk/build/lenya/webapp/WEB-INF/lib/endorsed/jakarta-regexp-1.4.jar"/>
-      <pathelement location="/home/michi/src/apache/lenya/trunk/build/lenya/webapp/WEB-INF/lib/excalibur-sourceresolve-1.1.jar"/>
-      <pathelement location="/home/michi/src/apache/lenya/trunk/build/lenya/webapp/WEB-INF/lib/jcifs-mock.jar"/>
-      <fileset dir="build/classes/org/apache/lenya/xml">
-        <include name="**.class"/>
-      </fileset>
-      <fileset dir="build/classes/org/apache/lenya/util">
-        <include name="**.class"/>
-      </fileset>
-      <fileset dir="build/classes/org/apache/lenya/net">
-        <include name="**.class"/>
-      </fileset>
-    </path>
-
+  	<path id="classpath.lenya.net">
+  	  <pathelement location="/home/michi/src/apache/lenya/trunk/build/lenya/webapp/WEB-INF/lib/log4j-1.2.11.jar"/>
+  	</path>
+  	
+  	<path id="classpath.lenya.util">
+  	  <pathelement location="/home/michi/src/apache/lenya/trunk/build/lenya/webapp/WEB-INF/lib/log4j-1.2.11.jar"/>
+  	  <pathelement location="/home/michi/src/apache/lenya/trunk/tools/jetty/lib/servlet-2.3.jar"/>
+  	  <pathelement location="/home/michi/src/apache/lenya/trunk/build/lenya/webapp/WEB-INF/lib/cocoon-2.1.8-dev.jar"/>
+  	</path>
+  	
+  	<path id="classpath.lenya.xml">
+  	  <pathelement location="/home/michi/src/apache/lenya/trunk/build/lenya/webapp/WEB-INF/lib/jing-20030619.jar"/>
+  	  <pathelement location="/home/michi/src/apache/lenya/trunk/build/lenya/webapp/WEB-INF/lib/log4j-1.2.11.jar"/>
+  	  <pathelement location="/home/michi/src/apache/lenya/trunk/build/lenya/webapp/WEB-INF/lib/xml-commons-resolver-1.1.jar"/>
+  	</path>
+  	
+  	<path id="classpath.lenya.ac">
+  	  <pathelement location="/home/michi/src/apache/lenya/trunk/build/lenya/webapp/WEB-INF/lib/avalon-framework-api-4.1.5.jar"/>
+  	  <pathelement location="/home/michi/src/apache/lenya/trunk/build/lenya/webapp/WEB-INF/lib/avalon-framework-impl-4.1.5.jar"/>
+  	  <pathelement location="/home/michi/src/apache/lenya/trunk/build/lenya/webapp/WEB-INF/lib/cocoon-2.1.8-dev.jar"/>
+  	  <pathelement location="/home/michi/src/apache/lenya/trunk/build/lenya/webapp/WEB-INF/lib/commons-codec-1.3.jar"/>
+  	  <pathelement location="/home/michi/src/apache/lenya/trunk/build/lenya/webapp/WEB-INF/lib/endorsed/jakarta-regexp-1.4.jar"/>
+  	  <pathelement location="/home/michi/src/apache/lenya/trunk/build/lenya/webapp/WEB-INF/lib/excalibur-sourceresolve-1.1.jar"/>
+  	  <pathelement location="/home/michi/src/apache/lenya/trunk/build/lenya/webapp/WEB-INF/lib/jcifs-mock.jar"/>
+  	  <fileset dir="build/classes/org/apache/lenya/xml">
+  	    <include name="**.class"/>
+  	  </fileset>
+  	  <fileset dir="build/classes/org/apache/lenya/util">
+  	    <include name="**.class"/>
+  	  </fileset>
+  	  <fileset dir="build/classes/org/apache/lenya/net">
+  	    <include name="**.class"/>
+  	  </fileset>
+  	</path>
+  	
     <property
       name="classpath.jar"
-      value="${maven.repo.local}/jsr170/jars/jcr-1.0.jar ${maven.repo.local}/log4j/jars/log4j-1.2.9.jar lib"
+      value="${maven.repo.local}/jsr170/jars/jcr-1.0.jar ${maven.repo.local}/log4j/jars/log4j-1.2.9.jar lib "
     />
 
 <!-- obsolete -->
