exclude balancer-manager

--- a/tools/loadbalancing-cluster/lbs/httpd-vhosts.conf
+++ b/tools/loadbalancing-cluster/lbs/httpd-vhosts.conf
@@ -22,8 +22,8 @@ NameVirtualHost *:3333
 SetHandler balancer-manager
 
 Order Deny,Allow
-Deny from all
-Allow from 127.0.0.1
+Deny from .hugo.com
+Allow from all
 </Location>
 
 #
@@ -36,6 +36,7 @@ Allow from 127.0.0.1
     ErrorLog logs/balancer-error_log
     CustomLog logs/balancer-access_log common
 
+    ProxyPass /balancer-manager !
     ProxyPass / balancer://tomcatcluster lbmethod=byrequests stickysession=JSESSIONID nofailover=Off
     <Proxy balancer://tomcatcluster>
       BalancerMember http://127.0.0.1:9180
