ProxyRequests Off added

--- a/tools/loadbalancing-cluster/lbs/httpd-vhosts.conf
+++ b/tools/loadbalancing-cluster/lbs/httpd-vhosts.conf
@@ -36,10 +36,11 @@ Allow from all
     ErrorLog logs/balancer-error_log
     CustomLog logs/balancer-access_log common
 
+    ProxyRequests Off
     ProxyPass /balancer-manager !
-    ProxyPass / balancer://tomcatcluster lbmethod=byrequests stickysession=JSESSIONID nofailover=Off
+    ProxyPass /cluster/ balancer://tomcatcluster lbmethod=byrequests stickysession=JSESSIONID nofailover=Off
     <Proxy balancer://tomcatcluster>
-      BalancerMember http://127.0.0.1:9180
-      BalancerMember http://127.0.0.1:9280
+      BalancerMember http://127.0.0.1:9180/cluster/
+      BalancerMember http://127.0.0.1:9280/cluster/
     </Proxy>
 </VirtualHost>
