no load balancing added

--- a/tools/loadbalancing-cluster/lbs/httpd-vhosts.conf
+++ b/tools/loadbalancing-cluster/lbs/httpd-vhosts.conf
@@ -36,11 +36,20 @@ Allow from all
     ErrorLog logs/balancer-error_log
     CustomLog logs/balancer-access_log common
 
+# Bug re sticky sessions: http://mail-archives.apache.org/mod_mbox/httpd-bugs/200509.mbox/%3c20050905154136.58FE5340@ajax.apache.org%3e
     ProxyRequests Off
+
     ProxyPass /balancer-manager !
-    ProxyPass /cluster/ balancer://tomcatcluster lbmethod=byrequests stickysession=JSESSIONID nofailover=Off
+
+    ProxyPass /cluster/ http://127.0.0.1:9180/cluster/
+    ProxyPassReverse /cluster/ http://127.0.0.1:9180/cluster/
+
+    #ProxyPass /cluster/ balancer://tomcatcluster lbmethod=byrequests stickysession=JSESSIONID nofailover=Off
+
     <Proxy balancer://tomcatcluster>
-      BalancerMember http://127.0.0.1:9180/cluster/
-      BalancerMember http://127.0.0.1:9280/cluster/
+      BalancerMember ajp://127.0.0.1:9109/cluster/
+      BalancerMember ajp://127.0.0.1:9209/cluster/
+#      BalancerMember http://127.0.0.1:9180/cluster/
+#      BalancerMember http://127.0.0.1:9280/cluster/
     </Proxy>
 </VirtualHost>
