--- a/tools/loadbalancing-cluster/lbs/httpd.conf
+++ b/tools/loadbalancing-cluster/lbs/httpd.conf
@@ -52,6 +52,12 @@ Listen 3333
 # LoadModule foo_module modules/mod_foo.so
 #
 
+LoadModule jk_module modules/mod_jk.so
+
+#LoadModule proxy_module modules/mod_proxy.so
+#LoadModule proxy_http_module modules/mod_proxy_http.so
+#LoadModule proxy_connect_module modules/mod_proxy_connect.so
+
 <IfModule !mpm_winnt_module>
 <IfModule !mpm_netware_module>
 #
