--- a/tools/loadbalancing-cluster/lbs/httpd.conf
+++ b/tools/loadbalancing-cluster/lbs/httpd.conf
@@ -53,6 +53,9 @@ Listen 3333
 #
 
 LoadModule jk_module modules/mod_jk.so
+JkWorkersFile conf/workers.properties
+JkLogFile logs/mod_jk.log
+JkLogLevel info
 
 #LoadModule proxy_module modules/mod_proxy.so
 #LoadModule proxy_http_module modules/mod_proxy_http.so
