mod_jk commented

--- a/tools/loadbalancing-cluster/lbs/httpd.conf
+++ b/tools/loadbalancing-cluster/lbs/httpd.conf
@@ -52,10 +52,10 @@ Listen 3333
 # LoadModule foo_module modules/mod_foo.so
 #
 
-LoadModule jk_module modules/mod_jk.so
-JkWorkersFile conf/workers.properties
-JkLogFile logs/mod_jk.log
-JkLogLevel info
+#LoadModule jk_module modules/mod_jk.so
+#JkWorkersFile conf/workers.properties
+#JkLogFile logs/mod_jk.log
+#JkLogLevel info
 
 <IfModule !mpm_winnt_module>
 <IfModule !mpm_netware_module>
