--- a/tools/loadbalancing-cluster/lbs/httpd.conf
+++ b/tools/loadbalancing-cluster/lbs/httpd.conf
@@ -14,8 +14,8 @@
 # of the server's control files begin with "/" (or "drive:/" for Win32), the
 # server will use that explicit path.  If the filenames do *not* begin
 # with "/", the value of ServerRoot is prepended -- so "logs/foo.log"
-# with ServerRoot set to "/home/michi/build/http-2.1.9-beta" will be interpreted by the
-# server as "/home/michi/build/http-2.1.9-beta/logs/foo.log".
+# with ServerRoot set to "@PREFIX@" will be interpreted by the
+# server as "@PREFIX@/logs/foo.log".
 
 #
 # ServerRoot: The top of the directory tree under which the server's
@@ -26,7 +26,7 @@
 # at a local disk.  If you wish to share the same ServerRoot for multiple
 # httpd daemons, you will need to change at least LockFile and PidFile.
 #
-ServerRoot "/home/michi/build/http-2.1.9-beta"
+ServerRoot "@PREFIX@"
 
 #
 # Listen: Allows you to bind Apache to specific IP addresses and/or
@@ -105,7 +105,7 @@ ServerAdmin you@example.com
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-DocumentRoot "/home/michi/build/http-2.1.9-beta/htdocs"
+DocumentRoot "@PREFIX@/htdocs"
 
 #
 # Each directory to which Apache has access can be configured with respect
@@ -132,7 +132,7 @@ DocumentRoot "/home/michi/build/http-2.1.9-beta/htdocs"
 #
 # This should be changed to whatever you set DocumentRoot to.
 #
-<Directory "/home/michi/build/http-2.1.9-beta/htdocs">
+<Directory "@PREFIX@/htdocs">
     #
     # Possible values for the Options directive are "None", "All",
     # or any combination of:
@@ -251,7 +251,7 @@ LogLevel warn
     # client.  The same rules about trailing "/" apply to ScriptAlias
     # directives as to Alias.
     #
-    ScriptAlias /cgi-bin/ "/home/michi/build/http-2.1.9-beta/cgi-bin/"
+    ScriptAlias /cgi-bin/ "@PREFIX@/cgi-bin/"
 
 </IfModule>
 
@@ -264,10 +264,10 @@ LogLevel warn
 </IfModule>
 
 #
-# "/home/michi/build/http-2.1.9-beta/cgi-bin" should be changed to whatever your ScriptAliased
+# "@PREFIX@/cgi-bin" should be changed to whatever your ScriptAliased
 # CGI directory exists, if you have that configured.
 #
-<Directory "/home/michi/build/http-2.1.9-beta/cgi-bin">
+<Directory "@PREFIX@/cgi-bin">
     AllowOverride None
     Options None
     Order allow,deny
