--- a/tools/loadbalancing-cluster/lbs/httpd-vhosts.conf
+++ b/tools/loadbalancing-cluster/lbs/httpd-vhosts.conf
@@ -38,25 +38,25 @@ Allow from all
 
 
 # mod_jk
-    #SetEnvIf Request_URI "/index.html" no-jk
-    #JkMount /* wlb
+    SetEnvIf Request_URI "/index.html" no-jk
+    JkMount /* wlb
 
 
 # mod_proxy_balancer
 # Bug re sticky sessions: http://mail-archives.apache.org/mod_mbox/httpd-bugs/200509.mbox/%3c20050905154136.58FE5340@ajax.apache.org%3e
-    ProxyRequests Off
+    ##ProxyRequests Off
 
-    ProxyPass /balancer-manager !
+    ##ProxyPass /balancer-manager !
 
-    ProxyPass /cluster/ http://127.0.0.1:9180/cluster/
-    ProxyPassReverse /cluster/ http://127.0.0.1:9180/cluster/
+    ##ProxyPass /cluster/ http://127.0.0.1:9180/cluster/
+    ##ProxyPassReverse /cluster/ http://127.0.0.1:9180/cluster/
 
-    ProxyPass /cluster/ balancer://tomcatcluster/ lbmethod=byrequests stickysession=JSESSIONID nofailover=Off
+    ##ProxyPass /cluster/ balancer://tomcatcluster/ lbmethod=byrequests stickysession=JSESSIONID nofailover=Off
 
-    <Proxy balancer://tomcatcluster/>
-      BalancerMember ajp://127.0.0.1:9109/cluster/
-      BalancerMember ajp://127.0.0.1:9209/cluster/
+    ##<Proxy balancer://tomcatcluster/>
+      ##BalancerMember ajp://127.0.0.1:9109/cluster/
+      ##BalancerMember ajp://127.0.0.1:9209/cluster/
 #      BalancerMember http://127.0.0.1:9180/cluster/
 #      BalancerMember http://127.0.0.1:9280/cluster/
-    </Proxy>
+    ##</Proxy>
 </VirtualHost>
