organization and developers started

--- a/may/pom.xml
+++ b/may/pom.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.wyona.may</groupId>
   <artifactId>may</artifactId>
@@ -9,6 +12,22 @@
   <version>1.0-SNAPSHOT</version>
   <name>Maven Quick Start Archetype</name>
   <url>http://maven.apache.org</url>
+
+  <developers>
+    <developer>
+      <id>michi</id>
+      <name>Michael Wechner</name>
+      <email>michael.wechner@wyona.com</email>
+      <organization>Wyona</organization>
+      <timezone>CET</timezone>
+    </developer>
+  </developers>
+
+  <organization>
+    <name>Wyona</name>
+    <url>http://www.wyona.org</url>
+  </organization>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -21,6 +40,14 @@
       <artifactId>ant</artifactId>
       <version>1.6.5</version>
     </dependency>
+<!--
+    <dependency>
+      <groupId>yarep</groupId>
+      <artifactId>yarep</artifactId>
+      <version>0.0.1-dev-lcr4981</version>
+      <type>jar</type>
+    </dependency>
+-->
   </dependencies>
 
   <build>
