working sample data added

--- a/may/src/main/java/yarep.properties
+++ b/may/src/main/java/yarep.properties
@@ -1,4 +1,5 @@
 #
 # Pattern: repoID1,repoConfigFile1,repoID2,repoConfigFile2,...
 #
-configurations=wyona,../repositories/wyona/config/repository.xml
+configurations=wyona,../src/main/webapps/cocoon/src/blocks/wyona-may-erp/WEB-INF/wyona-may-erp-sample-repository.xml
+#configurations=wyona,../repositories/wyona/config/repository.xml
