--- a/may/pom.xml
+++ b/may/pom.xml
@@ -35,7 +35,10 @@
     </repository>
     <repository>
       <id>ibiblio</id>
+      <url>http://www.ibiblio.org/maven2/</url>
+<!--
       <url>http://www.ibiblio.org/maven/</url>
+-->
     </repository>
   </repositories>
 
@@ -55,6 +58,27 @@
       <groupId>yarep</groupId>
       <artifactId>yarep</artifactId>
       <version>0.0.1-dev-lcr4981</version>
+      <type>jar</type>
+    </dependency>
+
+    <dependency>
+      <groupId>xml-apis</groupId>
+      <artifactId>xml-apis</artifactId>
+      <version>2.0.2</version>
+      <type>jar</type>
+    </dependency>
+
+    <!-- runtime dependencies -->
+    <dependency>
+      <groupId>avalon-framework</groupId>
+      <artifactId>avalon-framework-api</artifactId>
+      <version>4.1.5</version>
+      <type>jar</type>
+    </dependency>
+    <dependency>
+      <groupId>avalon-framework</groupId>
+      <artifactId>avalon-framework-impl</artifactId>
+      <version>4.1.5</version>
       <type>jar</type>
     </dependency>
   </dependencies>
